2003-12-22  Nobuo Yamashita <nobsun@sampou.org>

	* examples/lambdabooks.kahua (standard-frame, standard-page):

	position of 'context' arg rearraged to be at last but 'cont' arg.
	(fixed bug: the previous commit did not changed them).

2003-12-21  Nobuo Yamashita <nobsun@sampou.org>

	* examples/lambdabooks.kahua (standard-frame, standard-page):
	* examples/lambdabooks/book.kahua (show-book-detail):
	* examples/lambdabooks/login.kahua (login-dialog, new-user): 
	local functions
	* examples/lambdabooks/review.kahua (show-reviews, write-review):
	* examples/lambdabooks/useradmin.kahua (user-edit-panel)
	local function
	
	position of 'context' arg rearraged to be at last but 'cont' arg.

	* examples/lambdabooks/lister.kahua (lister)

	modified args order and curried.

2003-12-21  Shiro Kawai  <shiro@acm.org>

	* src/kahua/test/xml.scm (match-pattern): added !contain
	directive.

	* test/test-xml.scm : added tests fo the above change.

2003-12-19  Shiro Kawai  <shiro@acm.org>

	* src/kahua/test/xml.scm
	(match-pattern) : treat attribute node (@ ...) specially; in it,
	patterns match any permutations of the input.
	(test-sxml-select-matcher, test-xml-select-matcher) : added
	higher-order test function parameterized by sxpath selection rule.

	* test/test-xml.scm : added tests for the above change.

2003-12-19  Nobuo Yamashita  <nobsun@sampou.org>

	* test/lambdabooks.scm:
	
	- Modified call-server/gsid and match&pick to keep sgsid.
	- Improved page checking pattern generation.
	- All pages are NOT YET covered. 

2003-12-15  Nobuo Yamashita  <nobsun@sampou.org>

	* test/lambdabooks.scm:
	Added code testing page transition for anonymous user.
	Still no code for loginuser.
	
2003-12-15  Nobuo Yamashita  <nobsun@sampou.org>

	* test/lambdabooks.scm:
	Added for testing examples/lambdabooks.kahua 
	The test script is work but not yet completed.

	* test/Makefile: 
	Added a entry for lambdabooks.scm.

	* examples/lambdabooks.init: 